Fix header footer on mobile

--- a/style.css
+++ b/style.css
@@ -24,7 +24,10 @@
     header {
       background: #325B89;
       color: #fff;
-      padding: 40px 20px;
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 0 20px;
+      width: 100%;
       text-align: center;
     }
     header h1 {
@@ -60,9 +63,6 @@
       border: 1px solid lightgray; 
       border-radius: 8px;
       box-shadow: 0 2px 8px gray;
-
-
-
     }
     section {
       margin-bottom: 45px;
@@ -71,7 +71,10 @@
       background: #333;
       color: #fff;
       text-align: center;
-      padding: 20px;
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 0 20px;
+      width: 100%;
     }
     a {
       color: #007acc;
@@ -86,7 +89,7 @@
     width: 900px;
     margin: 0 auto;
     display: flex;
-    
+
 }
    
 .screenshot {
